--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@prisma/client": "5.20.0",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
