--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "updateRepo": "node --loader ts-node/esm -r dotenv/config src/cron/updateRepos.mts"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.13",
     "@prisma/client": "5.20.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
